--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "browser-sync": "^2.26.5",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
+    "gulp-cheerio": "^1.0.0",
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-imagemin": "^5.0.3",
     "gulp-plumber": "^1.2.1",
+    "gulp-replace": "^1.0.0",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-svg-sprite": "^1.5.0",
+    "gulp-svgmin": "^3.0.0",
     "gulp-uglify": "^3.0.2"
   },
   "dependencies": {
